# cpp-search-engine

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h  RelativeIndex.h  SearchServer.h
nlohmann.json/.github/workflows/: check_amalgamation.yml  cifuzz.yml  codeql-analysis.yml  comment_check_amalgamation.yml  flawfinder.yml  labeler.yml  publish_documentation.yml  scorecards.yml  semgrep.yml  stale.yml  ubuntu.yml
nlohmann.json/docs/mkdocs/: requirements.txt
resources/: file1.txt  file2.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
